2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Added new
	  constructor.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Fixed
	  'Bug 538257 - Crash in FindReferences'.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/IPrettyPrinter.cs: Changed pretty
	  printer interface.

2009-09-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: fixed "Bug 529499 -
	  error in text editor extension chain".

2009-09-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: When copying an
	  assembly reference, recursively copy the assemblies it
	  references if they are located in the same directory. Fixes
	  bug #513889 - Fails to copy recursive assembly dependencies.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Overworked nested type
	  instantiation (Bug 536111 - Nested generic types should not
	  show <> on code completion when inner generic type is the
	  same)

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomCecilMethod.cs:
	* MonoDevelop.Projects.Dom/DomCecilProperty.cs: Retrieve the
	  explicit interfaces from cecil.

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/CompilationUnit.cs: Check type
	  name.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs: Added option for
	  synchronizing project release versions with the solution
	  version.

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Use a black list instead of a white list when deciding if a
	  property of SolutionEntityItem can be serialized.

	* md1format.xml: Update.

2009-09-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs: