@@ -1,5 +1,10 @@
 2009-09-11  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Projects.Dom/ResolveResult.cs: Multiple
+	  ResolveExtensionMethods calls now work.
+
+2009-09-11  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Projects.Dom/ResolveResult.cs: Added new
 	  constructor.
 
